[gd_scene load_steps=10 format=3 uid="uid://ck02xwpof8e6f"]

[ext_resource type="Texture2D" uid="uid://0fobti44i1dr" path="res://Scenes/Components/Weapons/Grenade.tres" id="1_agvxv"]
[ext_resource type="Script" path="res://Scenes/Components/Weapons/Projectiles/grenade.gd" id="1_btnao"]
[ext_resource type="Shader" path="res://Shaders/outline_shader.gdshader" id="2_etrrv"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_ar6c3"]
bounce = 50.0
absorbent = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mb3sg"]
shader = ExtResource("2_etrrv")
shader_parameter/Smooth = true
shader_parameter/on = true
shader_parameter/width = 45.0
shader_parameter/outline_color = Color(1, 0, 0, 1)
shader_parameter/pixel_size = 5
shader_parameter/width_speed = 10.0

[sub_resource type="CircleShape2D" id="CircleShape2D_2kf5f"]
radius = 37.054

[sub_resource type="CircleShape2D" id="CircleShape2D_wiv6o"]
radius = 556.705

[sub_resource type="Animation" id="Animation_p0cw5"]
resource_name = "Grenade_Throw_Anim"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0.1, -0.25, 0, 0.25, 0, 1.3, -0.25, 0, 0.25, 0, 0.75, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0.1, -0.25, 0, 0.25, 0, 1.3, -0.25, 0, 0.25, 0, 0.75, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3, 1)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bx37x"]
_data = {
"Grenade_Throw_Anim": SubResource("Animation_p0cw5")
}

[node name="Grenade" type="RigidBody2D"]
collision_layer = 8
collision_mask = 14
mass = 3.0
physics_material_override = SubResource("PhysicsMaterial_ar6c3")
gravity_scale = 0.0
inertia = 1.0
contact_monitor = true
linear_damp = 0.5
script = ExtResource("1_btnao")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_mb3sg")
position = Vector2(0, -7)
scale = Vector2(0.75, 0.75)
texture = ExtResource("1_agvxv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_2kf5f")

[node name="Area2D" type="Area2D" parent="."]

[node name="DamageArea" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_wiv6o")
debug_color = Color(0.831373, 0.388235, 0.152941, 0.419608)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bx37x")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_Damage_area_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Damage_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
